<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd9d9d9"
    tools:context=".FaqActivity">

    <!-- Imagen logo -->

    <!-- Título -->
    <ImageView
        android:id="@+id/logoView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gesemlogosinfondo" />

    <TextView
        android:id="@+id/tituloAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/preguntas_frecuentes"
        android:textColor="#ff104d80"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollFaq"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tituloAbout"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/layoutFaq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Pregunta 1 -->
            <TextView
                android:id="@+id/q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="8dp"
                android:text="@string/c_mo_puedo_conseguir_una_cuenta"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/a1"
                android:textColor="#333333"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Answer1Help"
                android:textSize="15sp"
                android:visibility="gone" />

            <!-- Pregunta 2 -->
            <TextView
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="8dp"
                android:text="@string/c_mo_puedo_restablecer_mi_contrase_a"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Answer2Help"
                android:textColor="#333333"
                android:textSize="15sp"
                android:visibility="gone" />

            <!-- Pregunta 3 -->
            <TextView
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="8dp"
                android:text="@string/d_nde_puedo_encontrar_soporte_t_cnico_o_ayuda"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="#333333"
                android:text="@string/Answer3Help"
                android:textSize="15sp"
                android:visibility="gone" />

            <!-- Pregunta 4 -->
            <TextView
                android:id="@+id/q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="8dp"
                android:text="@string/c_mo_puedo_dar_de_baja_mi_cuenta"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Answer4Help"
                android:textColor="#333333"
                android:textSize="15sp"
                android:visibility="gone" />

            <!-- Pregunta 5 -->
            <TextView
                android:id="@+id/q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="8dp"
                android:text="@string/qu_servicios_ofrece_la_aplicaci_n"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/a5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="#333333"

                android:text="@string/Answer5Help"
                android:textSize="15sp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/btnAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/aboutus" />

        <ImageButton
            android:id="@+id/btnFaq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/faq" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>